--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^19.2.0",
     "@tailwindcss/postcss": "^4.1.7",
     "angular-in-memory-web-api": "^0.19.0",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.7",
